[package]
name = "sigp-crates"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
authors = ["Sigma Prime"]
repository = "https://github.com/sigp/sigp-crates"
keywords = ["lighthouse", "ethereum", "sigp"]

[features]
full = [
    "task_executor",
    "metrics",
    ]

task_executor = ["dep:task_executor"]
metrics = ["dep:metrics"]

[dependencies]
task_executor = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
